# Hackathon-02-AI-Todo-App-Phase-III

./: CLAUDE.md  README.md
.claude/: settings.local.json
.claude/agents/: auth-integration-expert.md  backend-architect.md  neon-postgres-architect.md  nextjs-architect.md
.specify/memory/: agent-context.md  constitution.md
backend/: .env.example  .gitignore  README.md  check_tables.py  main.py  pyproject.toml  requirements.txt  setup_neon_db.py  test_db.py  test_neon_connection.py  test_openrouter.py
backend/src/: auth.py  config.py  models.py
backend/src/api/: deps.py  tasks.py
backend/src/api/middleware/: auth.py
backend/src/api/routers/: analytics.py  chat.py  mcp.py  tasks.py  testimonials.py  users.py
backend/src/mcp/: README.md  mcp_server.py
backend/src/mcp/agents/: todo_agent.py
backend/src/mcp/middleware/: auth_middleware.py
backend/src/mcp/runners/: task_runner.py
backend/src/mcp/tools/: error_codes.py  task_tools.py
backend/src/mcp/utils/: db_utils.py  logging.py
backend/src/services/: chat_service.py  task_service.py  testimonial_service.py  user_service.py
backend/src/utils/: database.py  db_utils.py  exception_handlers.py  jwt.py  logging_config.py  sync_database.py
backend/tests/: conftest.py  test_api.py  test_tasks.py
frontend/: README.md  package-lock.json  package.json  proxy.ts  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: ErrorBoundary.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  PricingSection.tsx  (+2 more)
(+134 files in other folders)
