[project]
name = "backend"
version = "0.1.0"
description = "Todo Backend API with FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.20",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
